Removed all ".html"s, compressed all images

--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
 							<li class="nav-item submenu dropdown">
 								<a class="nav-link" id="nextsection" href="#work">Games</a>
 								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="asgards-wrath.html">Asgard's Wrath</a></li>
-									<li class="nav-item"><a class="nav-link" href="marvel-powers.html">Marvel Powers United VR</a></li>
-									<li class="nav-item"><a class="nav-link" href="shackle.html">Shackle</a></li>
-									<li class="nav-item"><a class="nav-link" href="project-hypetrain.html">Project HYPETRAIN</a></li>
-									<li class="nav-item"><a class="nav-link" href="krabklashers.html">KrabKlashers</a></li>
-									<li class="nav-item"><a class="nav-link" href="wdwd-meow.html">What Do We Do Meow?</a></li>
-									<li class="nav-item"><a class="nav-link" href="incognitowl.html">IncognitOwl</a></li>
-									<li class="nav-item"><a class="nav-link" href="dreamlock.html">Dreamlock</a></li>
+									<li class="nav-item"><a class="nav-link" href="asgards-wrath">Asgard's Wrath</a></li>
+									<li class="nav-item"><a class="nav-link" href="marvel-powers">Marvel Powers United VR</a></li>
+									<li class="nav-item"><a class="nav-link" href="shackle">Shackle</a></li>
+									<li class="nav-item"><a class="nav-link" href="project-hypetrain">Project HYPETRAIN</a></li>
+									<li class="nav-item"><a class="nav-link" href="krabklashers">KrabKlashers</a></li>
+									<li class="nav-item"><a class="nav-link" href="wdwd-meow">What Do We Do Meow?</a></li>
+									<li class="nav-item"><a class="nav-link" href="incognitowl">IncognitOwl</a></li>
+									<li class="nav-item"><a class="nav-link" href="dreamlock">Dreamlock</a></li>
 									<li class="nav-item"><a class="nav-link" href="core-decisions">Core Decisions</a></li>
 								</ul>
 							</li>
 							<li class="nav-item"><a class="nav-link" id="nextsection" href="#about">About</a></li>
 							<li class="nav-item"><a class="nav-link" id="nextsection" href="#contact">Contact</a></li>
-							<!-- <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li> -->
+							<!-- <li class="nav-item"><a class="nav-link" href="elements">Elements</a></li> -->
 							<!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 								 aria-expanded="false">Pages</a>
 								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a>
+									<li class="nav-item"><a class="nav-link" href="elements">Elements</a>
 								</ul>
 							</li> -->
-							<!-- <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li> -->
+							<!-- <li class="nav-item"><a class="nav-link" href="blog">Blog</a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -133,7 +133,7 @@
 				<div class="grid-sizer col-sm-6 col-md-3 col-lg-3"></div>
 				<!-- Asgard's Wrath -->
 				<div class="col-lg-6 col-sm-6 col-sm-12 ld gp grid-item">
-					<a href="asgards-wrath.html">
+					<a href="asgards-wrath">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/wrath.jpg" alt="">
 							<div class="projects_text">
@@ -146,7 +146,7 @@
 				</div>
 				<!-- Marvel Powers United VR -->
 				<div class="col-lg-6 col-sm-6 col-sm-12 gd grid-item">
-					<a href="marvel-powers.html">
+					<a href="marvel-powers">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/mahvel.png" alt="">
 							<div class="projects_text">
@@ -159,7 +159,7 @@
 				</div>
 				<!-- Shackle -->
 				<div class="col-lg-6 col-sm-6 col-sm-12 ld gd gp pl grid-item">
-					<a href="shackle.html">
+					<a href="shackle">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/shackle.png" alt="">
 							<div class="projects_text">
@@ -172,7 +172,7 @@
 				</div>
 				<!-- Project HYPETRAIN -->
 				<div class="col-lg-3 col-sm-6 ld gd pl gp grid-item">
-					<a href="project-hypetrain.html">
+					<a href="project-hypetrain">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/hypetrain.png" alt="">
 							<div class="projects_text">
@@ -185,7 +185,7 @@
 				</div>
 				<!-- KrabKlashers -->
 				<div class="col-lg-3 col-sm-6 ld gd pl grid-item">
-					<a href="krabklashers.html">
+					<a href="krabklashers">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/krabklashers.png" alt="">
 							<div class="projects_text">
@@ -198,7 +198,7 @@
 				</div>
 				<!-- What Do We Do Meow? -->
 				<div class="col-lg-3 col-sm-6 gd gp grid-item">
-					<a href="wdwd-meow.html">
+					<a href="wdwd-meow">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/wdwd-meow.png" alt="">
 							<div class="projects_text">
@@ -211,7 +211,7 @@
 				</div>
 				<!-- IncognitOwl -->
 				<div class="col-lg-3 col-sm-6 pl gd ld grid-item">
-					<a href="incognitowl.html">
+					<a href="incognitowl">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/incognitowl.png" alt="">
 							<div class="projects_text">
@@ -224,7 +224,7 @@
 				</div>
 				<!-- Dreamlock -->
 				<div class="col-lg-3 col-sm-6 ld gp grid-item">
-					<a href="dreamlock.html">
+					<a href="dreamlock">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/dreamlock.png" alt="">
 							<div class="projects_text">
@@ -237,7 +237,7 @@
 				</div>
 				<!-- Core Decisions -->
 				<div class="col-lg-3 col-sm-6 gd gp grid-item">
-					<a href="core-decisions.html">
+					<a href="core-decisions">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/core-decisions.png" alt="">
 							<div class="projects_text">
@@ -258,7 +258,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-5 about-left">
-					<img class="img-fluid" src="img/about/designer.jpg" alt="">
+					<img class="img-fluid" src="img/about/about.png" alt="">
 				</div>
 				<div class="col-lg-6 col-md-12 about-right">
 					<div class="main-title text-left">
