--- a/wdwd-meow.html
+++ b/wdwd-meow.html
@@ -28,7 +28,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
+					<a class="navbar-brand" href="index"><img src="img/logo.png" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse"
 						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
@@ -39,19 +39,19 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav justify-content-end">
-							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+							<li class="nav-item"><a class="nav-link" href="index">Home</a></li>
 							<li class="nav-item active submenu dropdown">
 								<a class="nav-link" id="nextsection" href="#work">Games</a>
 								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="asgards-wrath.html">Asgard's Wrath</a></li>
-									<li class="nav-item"><a class="nav-link" href="marvel-powers.html">Marvel Powers United VR</a></li>
-									<li class="nav-item"><a class="nav-link" href="shackle.html">Shackle</a></li>
-									<li class="nav-item"><a class="nav-link" href="project-hypetrain.html">Project HYPETRAIN</a></li>
-									<li class="nav-item"><a class="nav-link" href="krabklashers.html">KrabKlashers</a></li>
-									<li class="nav-item"><a class="nav-link" href="wdwd-meow.html">What Do We Do Meow?</a></li>
-									<li class="nav-item"><a class="nav-link" href="incognitowl.html">IncognitOwl</a></li>
-									<li class="nav-item"><a class="nav-link" href="dreamlock.html">Dreamlock</a></li>
-									<li class="nav-item"><a class="nav-link" href="core-decisions.html">Core Decisions</a></li>
+									<li class="nav-item"><a class="nav-link" href="asgards-wrath">Asgard's Wrath</a></li>
+									<li class="nav-item"><a class="nav-link" href="marvel-powers">Marvel Powers United VR</a></li>
+									<li class="nav-item"><a class="nav-link" href="shackle">Shackle</a></li>
+									<li class="nav-item"><a class="nav-link" href="project-hypetrain">Project HYPETRAIN</a></li>
+									<li class="nav-item"><a class="nav-link" href="krabklashers">KrabKlashers</a></li>
+									<li class="nav-item"><a class="nav-link" href="wdwd-meow">What Do We Do Meow?</a></li>
+									<li class="nav-item"><a class="nav-link" href="incognitowl">IncognitOwl</a></li>
+									<li class="nav-item"><a class="nav-link" href="dreamlock">Dreamlock</a></li>
+									<li class="nav-item"><a class="nav-link" href="core-decisions">Core Decisions</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -129,7 +129,7 @@
 				<div class="grid-sizer col-sm-6 col-md-3 col-lg-3"></div>
 				<!-- Asgard's Wrath -->
 				<div class="col-lg-3 col-sm-6 ld gp grid-item">
-					<a href="asgards-wrath.html">
+					<a href="asgards-wrath">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/wrath-small.png" alt="">
 							<div class="projects_text">
@@ -142,7 +142,7 @@
 				</div>
 				<!-- Marvel Powers United VR -->
 				<div class="col-lg-3 col-sm-6 gd grid-item">
-					<a href="marvel-powers.html">
+					<a href="marvel-powers">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/mahvel-small.png" alt="">
 							<div class="projects_text">
@@ -155,7 +155,7 @@
 				</div>
 				<!-- Shackle -->
 				<div class="col-lg-3 col-sm-6 ld gd gp pl grid-item">
-					<a href="shackle.html">
+					<a href="shackle">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/shackle-old.png" alt="">
 							<div class="projects_text">
@@ -168,7 +168,7 @@
 				</div>
 				<!-- Project HYPETRAIN -->
 				<div class="col-lg-3 col-sm-6 ld gd pl gp grid-item">
-					<a href="project-hypetrain.html">
+					<a href="project-hypetrain">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/hypetrain.png" alt="">
 							<div class="projects_text">
@@ -181,7 +181,7 @@
 				</div>
 				<!-- KrabKlashers -->
 				<div class="col-lg-3 col-sm-6 ld gd pl grid-item">
-					<a href="krabklashers.html">
+					<a href="krabklashers">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/krabklashers.png" alt="">
 							<div class="projects_text">
@@ -194,7 +194,7 @@
 				</div>
 				<!-- What Do We Do Meow? -->
 				<!-- <div class="col-lg-3 col-sm-6 gd gp grid-item">
-					<a href="wdwd-meow.html">
+					<a href="wdwd-meow">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/wdwd-meow.png" alt="">
 							<div class="projects_text">
@@ -207,7 +207,7 @@
 				</div> -->
 				<!-- IncognitOwl -->
 				<div class="col-lg-3 col-sm-6 pl gd ld grid-item">
-					<a href="incognitowl.html">
+					<a href="incognitowl">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/incognitowl.png" alt="">
 							<div class="projects_text">
@@ -220,7 +220,7 @@
 				</div>
 				<!-- Dreamlock -->
 				<div class="col-lg-3 col-sm-6 ld gp grid-item">
-					<a href="dreamlock.html">
+					<a href="dreamlock">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/dreamlock.png" alt="">
 							<div class="projects_text">
@@ -233,7 +233,7 @@
 				</div>
 				<!-- Core Decisions -->
 				<div class="col-lg-3 col-sm-6 gd gp grid-item">
-					<a href="core-decisions.html">
+					<a href="core-decisions">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/core-decisions.png" alt="">
 							<div class="projects_text">
