--- a/incognitowl_game/browser.html
+++ b/incognitowl_game/browser.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-  
-  	<title>IncognitOwl</title>
-	<link rel="icon" type="image/vnd.microsoft.icon" href="../images/favicon.ico" />
-	
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	
-    <link rel="stylesheet" href="../include/css/bootstrap.css">
-    <link rel="stylesheet" href="../include/css/incognitowl.css">
-    
-  </head>
-	
-<body onload="checkCookie()" id="browser">
-	
-    <img id="owl" src="../include/img/work/thumbs/jax.png">
-    <img id="bat" src="../include/img/work/thumbs/bat.png">
-	
-    <canvas id='canvas' width="840" height="630"></canvas>
-    <script src="brine.js"></script>
-    <script src="screenMan.js"></script>
-    <script src="Tutorial.js"></script>
-    <script src="tutorialScript.js"></script>
-    <script src="levelOneScript.js"></script>
-    <script src="levelTwoScript.js"></script>
-    <script src="levelThreeScript.js"></script>
-    <script src="level1.js"></script>
-    <script src="level2.js"></script>
-    <script src="level3.js"></script>
-    <script src="cookieMan.js"></script>
-	
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-690049900-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-	<a href="http://purpleplattypus.com" class="btn btn-custom" id="browser">Return to Site</a>
-	
-	<p>© Hayden Platt</p>
-	
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	
-  </body>
+    gtag('config', 'UA-690049900-1');
+  </script>
+  <title>IncognitOwl</title>
+  <link rel="icon" type="image/vnd.microsoft.icon" href="../images/favicon.ico" />
+
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+  <link rel="stylesheet" href="../include/css/bootstrap.css">
+  <link rel="stylesheet" href="../include/css/incognitowl.css">
+
+</head>
+
+<body onload="checkCookie()" id="browser">
+
+  <img id="owl" src="../include/img/work/thumbs/jax.png">
+  <img id="bat" src="../include/img/work/thumbs/bat.png">
+
+  <canvas id='canvas' width="840" height="630"></canvas>
+  <script src="brine.js"></script>
+  <script src="screenMan.js"></script>
+  <script src="Tutorial.js"></script>
+  <script src="tutorialScript.js"></script>
+  <script src="levelOneScript.js"></script>
+  <script src="levelTwoScript.js"></script>
+  <script src="levelThreeScript.js"></script>
+  <script src="level1.js"></script>
+  <script src="level2.js"></script>
+  <script src="level3.js"></script>
+  <script src="cookieMan.js"></script>
+
+
+  <a href="http://purpleplattypus.com" class="btn btn-custom" id="browser">Return to Site</a>
+
+  <p>© Hayden Platt</p>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+
+</body>
+
 </html>
