Update resume, fix typo in Shackle description

--- a/shackle.html
+++ b/shackle.html
@@ -103,11 +103,11 @@
 				</div>
 				<div class="col-lg-6 col-md-12 about-right mobile_gap">
 					<p>
-						<b>Shackle</b> is a cooperative VR horror game; the result of our senior capstone project for the Game Deisgn major at <b>UC Santa Cruz</b>. After successfully pitching
+						<b>Shackle</b> is a cooperative VR horror game, the result of our senior capstone project for the Game Design major at <b>UC Santa Cruz</b>. After successfully pitching
 						and prototyping the concept independently, I was given the opportunity to interview fellow classmates and assemble a full development team to complete the project with.
 						<br><br>
 						As project lead I <b>facilitated frequent meetings</b> with both the core development team and remote contributors, <b>led Scrum processes</b> including sprint planning, review, 
-						and burndown charts, and took care to ensure that <b>all team members felt heard</b> and passionate about our project.
+						and burndown charts, and took care to ensure that <b>all team members felt heard</b> and felt passionate about our project.
 						<br><br>
 						On the design front, I <b>created and maintained the game's design document</b> to provide a clear picture to teammates and professors. Additionally, I collaborated with the project's
 						other level designer to <b>create engaging and exciting co-op spaces</b> that drove suspense and tested cooperation. Shackle went on to become a nominee for <b>IndieCade 2016</b>, and
