1 more bold fix for Shackle

--- a/shackle.html
+++ b/shackle.html
@@ -110,7 +110,7 @@
 						and burndown charts</b>, and took care to ensure that <b>all team members felt heard</b> and felt passionate about our project.
 						<br><br>
 						On the design front, I <b>created and maintained the game's design document</b> to provide a clear picture to teammates and professors. Additionally, I collaborated with the project's
-						other level designer to <b>create engaging and exciting co-op spaces</b> that drove suspense and tested cooperation. Shackle went on to become a nominee for <b>IndieCade 2016</b>, and
+						other level designer to <b>create engaging and exciting co-op spaces</b> that drove suspense and tested cooperation. Shackle went on to become a <b>nominee for IndieCade 2016</b>, and
 						still remains one of my proudest accomplishments with one of my favorite teams.
 					</p>
 				</div>
