--- a/asgards-wrath.html
+++ b/asgards-wrath.html
@@ -273,7 +273,7 @@
 							<h4>More Places to Find Me</h4>
 						</div>
 						<ul class="list">
-							<li><a href="https://twitter.com/purpl_plattypus" target="_blank"><img
+							<li><a href="https://twitter.com/LivePlattLove" target="_blank"><img
 										src="img/social/twitter_hover.png"
 										onmouseover="this.src='img/social/twitter_logo.png'"
 										onmouseout="this.src='img/social/twitter_hover.png'"></a></li>
