Update resume, clean up some cringe wording the about section

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 						<h3><i class="fa fa-lightbulb-o"></i> A Game Designer</h3>
 						<p>
 							Games for me create experiences and emotions unlike any other medium.
-							It's my personal goal to create games that exceeds the trends and formulas that appear in
+							It's my personal goal to create games that exceed the trends and formulas that appear in
 							the industry.
 							I'm in it to make genuinely innovative, engaging experiences with great people.
 						</p>
@@ -287,14 +287,14 @@
 							I've been naturally drawn to leadership since I was a kid organizing games to play in the
 							culdesac.
 							<!-- Since then, I've worked to bring together small indie teams HEERREROSEJGFSOPERIGJSEPOIGJ -->
-							Bringing people together to make something is great; culturing a creative and productive
-							team dynamic is effin' rad.
+							Bringing people together to make something is great; culturing a healthy, creative, and productive
+							team dynamic along the way is even better.
 						</p>
 						<h3><i class="fa fa-gamepad"></i> A Player</h3>
 						<p>
 							When I'm not making, odds are I'm playing -- well, studying really. Sometimes that means
-							debating the best Smash Bros. character over beers, sometimes that means trying to dissect 
-							what exactly makes Mario 64 feel so damn buttery, and sometimes it means organizing my thoughts 
+							debating the best Smash Bros. character, sometimes that means dissecting 
+							what exactly makes Mario 64's movement feel so damn buttery, and sometimes it means compiling my thoughts 
 							on a game in a spreadsheet. Whatever the method, I'm always looking to identify those bits of 
 							magic (or tragedy) that make games so compelling.
 						</p>
