Add Wrath II to portfolio, update pages as needed.

--- a/asgards-wrath-ii.html
+++ b/asgards-wrath-ii.html
@@ -74,12 +74,11 @@
 
 	<!--================ Start portfolio Banner Area =================-->
 	<section class="banner_area">
-		<div class="banner_inner d-flex align-items-center" id="project-hypetrain">
+		<div class="banner_inner d-flex align-items-center" id="wrath2">
 			<div class="banner-tint"></div>
 			<div class="container">
 				<div class="banner_content text-center">
-					<img class="banner_logo" src="img/logos/project-hypetrain-logo.png" alt="">
-					<h3><i class="fa fa-users"></i> Project Lead</h3>
+					<img class="banner_logo" src="img/logos/wrath2-logo.png" alt="">
 					<h3><i class="fa fa-gavel"></i> Level Designer</h3>
 					<h3><i class="fa fa-lightbulb-o"></i> Gameplay Designer</h3>
 					<h3><i class="fa fa-gamepad"></i> Gameplay Scripter</h3>
@@ -94,24 +93,23 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-6 about-left">
-					<img class="banner_logo" src="img/works/project-hypetrain-gif.gif" alt="">
-					<!-- <div class="responsive-video">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/LPURaqmMQsQ" frameborder="0"
+					<div class="responsive-video">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/EH698jXnDDQ" frameborder="0"
 							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
-					</div> -->
-					<div align="center" class="blog_info"><a target="_blank" href="https://ursamajorgames.com/homepage" class="primary-btn">Visit Website</a></div>
+					</div>
+					<div align="center" class="blog_info"><a target="_blank" href="https://www.meta.com/experiences/2603836099654226/" class="primary-btn">View In Store</a></div>
 				</div>
 				<div class="col-lg-6 col-md-12 about-right mobile_gap">
 					<p>
-						<b>Project HYPETRAIN</b> was a side project in college created as an avenue to further practice our game development skills. We formed the 9-person team <b>Ursa Major Games</b>,
-						including designers, artists, engineers, a sound designer, and a PR mananger. The project was a great opportunity to learn Unity, Git, and leadership skills, all of which helped 
-						several of us get a job teaching game design in Unity later that year.
+						With this sequel title, I was here from its inception. As such, I was given the opportunity to aid in the early discovery work on what a follow-up could look like -- 
+						investigating how we could push the envelope in terms of gameplay (new traversal mechanics, God-form powers, etc) and systems (Quests/Requests/Challenges, New Game+, etc.).
 						<br><br>
-						As project lead, I <b>held regular team meetings</b> to communicate progress, identify blockers, and facilitate pipelines between design, art, and engineering. As a developer I <b>formulated
-						designs for several traincars and HYPE modes</b> ("super forms" the player's gun could briefly take on), and <b>scripted gameplay features and moments in C#</b>.
+						After we had solidified some of our key innovations, I began driving the layout and design of the first story level where you control a mortal hero, <b>Temple of Atum</b>.
+						Success here meant creating intuitive spaces for players to get the hang of new mechanics, but also ensuring those beats felt appropriately epic and powerful as to foreshadow the adventure yet to come.
 						<br><br>
-						Unfortunately the project was left in Alpha as our college workload grew. However, some of us are starting pick up progress on the project again this year with hopes of bringing it into Beta.
+						This time around I also had the opportunity to advocate for better design tooling; pitching new ways to streamline existing systems such as save data management, quest completion logic, and prop interactions.
+						I then collaborated with engineering to oversee the development of these improvements, regularly circling back with the larger design team to ensure these new systems were proving useful and intuitive for them.
 					</p>
 				</div>
 			</div>
@@ -144,19 +142,6 @@
 			</div>
 			<div class="projects_inner row grid">
 				<div class="grid-sizer col-sm-6 col-md-3 col-lg-3"></div>
-				<!-- Asgard's Wrath II -->
-				<div class="col-lg-3 col-sm-6 ld gp grid-item">
-					<a href="asgards-wrath-ii">
-						<div class="projects_item">
-							<img class="img-fluid w-100" src="img/projects/wrath2-small.jpg" alt="">
-							<div class="projects_text">
-								<h4>Asgard's Wrath II</h4>
-								<p>Sanzaru Games</p>
-								<p>2023</p>
-							</div>
-						</div>
-					</a>
-				</div>
 				<!-- Asgard's Wrath -->
 				<div class="col-lg-3 col-sm-6 ld gp grid-item">
 					<a href="asgards-wrath">
@@ -197,7 +182,7 @@
 					</a>
 				</div>
 				<!-- Project HYPETRAIN -->
-				<!-- <div class="col-lg-3 col-sm-6 ld gd pl gp grid-item">
+				<div class="col-lg-3 col-sm-6 ld gd pl gp grid-item">
 					<a href="project-hypetrain">
 						<div class="projects_item">
 							<img class="img-fluid w-100" src="img/projects/hypetrain.png" alt="">
@@ -208,7 +193,7 @@
 							</div>
 						</div>
 					</a>
-				</div> -->
+				</div>
 				<!-- KrabKlashers -->
 				<div class="col-lg-3 col-sm-6 ld gd pl grid-item">
 					<a href="krabklashers">
