--- a/asgards-wrath.html
+++ b/asgards-wrath.html
@@ -97,7 +97,7 @@
 							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
 					</div>
-					<div align="center" class="blog_info"><a target="_blank" href="https://www.oculus.com/experiences/rift/1298930313503250/" class="primary-btn">View In Store</a></div>
+					<div align="center" class="blog_info"><a target="_blank" href="https://www.meta.com/experiences/pcvr/asgards-wrath/1180401875303371/" class="primary-btn">View In Store</a></div>
 				</div>
 				<div class="col-lg-6 col-md-12 about-right mobile_gap">
 					<p>
@@ -141,19 +141,19 @@
 			</div>
 			<div class="projects_inner row grid">
 				<div class="grid-sizer col-sm-6 col-md-3 col-lg-3"></div>
-				<!-- Asgard's Wrath -->
-				<!-- <div class="col-lg-3 col-sm-6 ld gp grid-item">
-					<a href="asgards-wrath">
+				<!-- Asgard's Wrath II -->
+				<div class="col-lg-3 col-sm-6 ld gp grid-item">
+					<a href="asgards-wrath-ii">
 						<div class="projects_item">
-							<img class="img-fluid w-100" src="img/projects/wrath-small.png" alt="">
+							<img class="img-fluid w-100" src="img/projects/wrath2-small.jpg" alt="">
 							<div class="projects_text">
-								<h4>Asgard's Wrath</h4>
+								<h4>Asgard's Wrath II</h4>
 								<p>Sanzaru Games</p>
-								<p>2019</p>
+								<p>2023</p>
 							</div>
 						</div>
 					</a>
-				</div> -->
+				</div>
 				<!-- Marvel Powers United VR -->
 				<div class="col-lg-3 col-sm-6 gd grid-item">
 					<a href="marvel-powers">
