--- a/index.html
+++ b/index.html
@@ -141,6 +141,19 @@
 			</div>
 			<div class="projects_inner row grid">
 				<div class="grid-sizer col-sm-6 col-md-3 col-lg-3"></div>
+				<!-- Asgard's Wrath II -->
+				<div class="col-lg-6 col-sm-6 col-sm-12 ld gp gd grid-item">
+					<a href="asgards-wrath">
+						<div class="projects_item">
+							<img class="img-fluid w-100" src="img/projects/wrath2.jpg" alt="">
+							<div class="projects_text">
+								<h4>Asgard's Wrath II</h4>
+								<p>Sanzaru Games</p>
+								<p>2023</p>
+							</div>
+						</div>
+					</a>
+				</div>
 				<!-- Asgard's Wrath -->
 				<div class="col-lg-6 col-sm-6 col-sm-12 ld gp grid-item">
 					<a href="asgards-wrath">
