--- a/marvel-powers.html
+++ b/marvel-powers.html
@@ -144,6 +144,19 @@
 			</div>
 			<div class="projects_inner row grid">
 				<div class="grid-sizer col-sm-6 col-md-3 col-lg-3"></div>
+				<!-- Asgard's Wrath II -->
+				<div class="col-lg-3 col-sm-6 ld gp grid-item">
+					<a href="asgards-wrath-ii">
+						<div class="projects_item">
+							<img class="img-fluid w-100" src="img/projects/wrath2-small.jpg" alt="">
+							<div class="projects_text">
+								<h4>Asgard's Wrath II</h4>
+								<p>Sanzaru Games</p>
+								<p>2023</p>
+							</div>
+						</div>
+					</a>
+				</div>
 				<!-- Asgard's Wrath -->
 				<div class="col-lg-3 col-sm-6 ld gp grid-item">
 					<a href="asgards-wrath">
