--- a/incognitowl.html
+++ b/incognitowl.html
@@ -98,7 +98,7 @@
 							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
 					</div>
-					<div align="center" class="blog_info"><a target="_blank" href="https://purpleplattypus.com/incognitowl_game/browser" class="primary-btn">Play In Browser</a></div>
+					<div align="center" class="blog_info"><a target="_blank" href="https://haydenplatt.me/incognitowl_game/browser" class="primary-btn">Play In Browser</a></div>
 				</div>
 				<div class="col-lg-6 col-md-12 about-right mobile_gap">
 					<p>
