--- a/incognitowl_game/browser.html
+++ b/incognitowl_game/browser.html
@@ -16,15 +16,15 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <link rel="stylesheet" href="../include/css/bootstrap.css">
-  <link rel="stylesheet" href="../include/css/incognitowl.css">
+  <link rel="stylesheet" href="include/css/bootstrap.css">
+  <link rel="stylesheet" href="include/css/incognitowl.css">
 
 </head>
 
 <body onload="checkCookie()" id="browser">
 
-  <img id="owl" src="../include/img/work/thumbs/jax.png">
-  <img id="bat" src="../include/img/work/thumbs/bat.png">
+  <img id="owl" src="include/img/work/thumbs/jax.png">
+  <img id="bat" src="include/img/work/thumbs/bat.png">
 
   <canvas id='canvas' width="840" height="630"></canvas>
   <script src="brine.js"></script>
@@ -39,9 +39,7 @@
   <script src="level3.js"></script>
   <script src="cookieMan.js"></script>
 
-
-  <a href="http://haydenplatt.me" class="btn btn-custom" id="browser">Return to Site</a>
-
+  <a href="http://haydenplatt.me" class="btn btn-custom" id="browser">Return to Portfolio</a>
   <p>© Hayden Platt</p>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
