--- a/incognitowl_game/browser.html
+++ b/incognitowl_game/browser.html
@@ -12,7 +12,7 @@
     gtag('config', 'UA-690049900-1');
   </script>
   <title>IncognitOwl</title>
-  <link rel="icon" type="image/vnd.microsoft.icon" href="../images/favicon.ico" />
+  <link rel="icon" type="image/vnd.microsoft.icon" href="../img/favicon.png" />
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
